--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "serverstart": "DEBUG=ose-webiste:* npm run dev"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,6 +13,11 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
