--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build-css": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/style.css --watch",
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "serverstart": "DEBUG=ose-webiste:* npm run dev"
+    "serverstart": "DEBUG=ose-webiste:* npm run dev",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
+    "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.3.2"
   }
 }
