--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build-css": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/style.css --watch",
     "start": "node ./bin/www",
     "serverstart": "DEBUG=ose-webiste:* npm run dev",
-    "dev": "nodemon ./bin/www"
+    "dev": "concurrently \"nodemon ./bin/www\" \"npm run build-css\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.3.2"
